fix/ sweet alert notification

--- a/index.html
+++ b/index.html
@@ -2,7 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="icon" type="image/png" href="logo.png" />
+    <style>
+    .swal2-popup {
+      border-radius: 0.75rem;
+      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+    }
+    .swal2-confirm {
+      background-color: #fff !important;
+      color: #0891b2 !important;
+      border: 1px solid #0891b2 !important;
+      transition: all 0.3s ease !important;
+    }
+    .swal2-confirm:hover {
+      background: linear-gradient(to right, #0891b2, #2563eb) !important;
+      color: #fff !important;
+    }
+    .swal2-cancel {
+      background-color: #fff !important;
+      color: #d33 !important;
+      border: 1px solid #d33 !important;
+      transition: all 0.3s ease !important;
+    }
+    .swal2-cancel:hover {
+      background-color: #d33 !important;
+      color: #fff !important;
+    }
+  </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Việt An</title>
   </head>
